<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Einkaufszettel</string>
    <string name="listen">Einkaufslisten</string>
    <string name="shops">Shops</string>
    <string name="artikel">Artikel</string>
    <string name="exit">Beenden</string>
    <string name="yes">ja</string>
    <string name="no">nein</string>
    <string name="finish_question">Wollen Sie den Einkaufszettel wirklich beenden?</string>
    <string name="fileopenerror">Datei %1$s konnte nicht geöffnet werden.</string>
    <string name="filereaderror">Fehler beim Lesen der Datei %1$s.</string>
    <string name="db_name">einkaufszettel.db</string>
    <string name="db_version">1</string>
    <string name="my_shops">Meine Shops</string>
    <string name="addShop">Shop hinzufügen</string>
    <string name="_ID">_id</string>
    <string name="table_shops">shops</string>
    <string name="table_artikel">artikel</string>
    <string name="table_listen">listen</string>
    <string name="table_einkauf">einkauf</string>
    <string name="field_shops_shopname">shopname</string>
    <string name="field_shops_ort">ort</string>
    <string name="field_artikel_bezeichnung">bezeichnung</string>
    <string name="field_einkauf_datum">datum</string>
    <string name="field_einkauf_shop">shop</string>
    <string name="field_listen_artikel">artikel</string>
    <string name="field_listen_anzahl">anzahl</string>
    <string name="field_listen_einkaufnr">einkaufnr</string>
    <string name="field_listen_erledigt">erledigt</string>
    <string name="edit_shop">Shop bearbeiten</string>
    <string name="change">Ändern</string>
    <string name="delete">Löschen</string>
    <string name="in">in</string>
    <string name="ok">Fertig</string>
    <string name="cancel">Abbrechen</string>
    <string name="shop">Shop</string>
    <string name="delete_shop">Shop löschen</string>
    <string name="uebernehmen">Übernehmen</string>
    <string name="shop_delete_question1">Es werden auch alle für diesen Shop erstellten Einkäufe gelöscht.</string>
    <string name="shop_delete_question2">Shop jetzt löschen?</string>
    <string name="shop_add">Neuer Shop</string>
    <string name="shop_ort">Ort</string>
    <string name="shop_name">Shopname</string>
    <string name="einkauf_add">Neuer Einkauf</string>
    <string name="field_einkauf_bemerkung">bemerkung</string>
    <string name="shop_dp">Shop:</string>
    <string name="einkauf_datum">Einkauf am:</string>
    <string name="bemerkung">Bemerkung:</string>
    <string name="addArtikel">Artikel hinzufügen</string>
    <string name="edit_artikel">Artikel bearbeiten</string>
    <string name="artikel_add">Neuer Artikel</string>
    <string name="artikelliste">Artikelliste</string>
    <string name="delete_artikel">Artikel löschen</string>
    <string name="artikel_delete_question1">Der Artikel wird gelöscht.</string>
    <string name="artikel_delete_question2">Sind Sie sicher?</string>
    <string name="artikelbezeichnung">Artikelbezeichnung</string>
    <string name="addEinkauf">Einkauf hinzufügen</string>
    <string name="field_einkauf_datum_sort">datum_sort</string>
    <string name="akteinkauf">Aktueller Einkaufszettel</string>
    <string name="akteinkaeufe">Aktuelle Einkäufe</string>
    <string name="einkaufsdaten">Einkaufs-Daten</string>
    <string name="aktzettel">Mein Einkaufszettel</string>
    <string name="einkaufam">Einkauf am</string>
    <string name="einkaufbei">bei</string>
    <string name="einkaufin">in</string>
    <string name="bemerkungen">Bemerkungen</string>
    <string name="back">Zurück</string>
    <string name="artikelliste_change">Artikelliste bearbeiten</string>
    <string name="artikelliste_einkauf">Artikel für aktuellen Einkauf</string>
    <string name="plus">+</string>
    <string name="einkauf_delete">Einkauf löschen</string>
    <string name="einkauf_edit">Einkauf bearbeiten</string>
    <string name="delete_einkauf">Einkauf löschen</string>
    <string name="einkauf_delete_question1">Es wird auch die Artikelliste zu diesem Einkauf gelöscht.</string>
    <string name="einkauf_delete_question2">Einkauf jetzt löschen?</string>
    <string name="app_icon_text">Einkaufszettel</string>
    <string name="hint_strikeout">Artikel längere Zeit berühren um die Streichung ein- bzw. auszuschalten.</string>
    <string name="field_listen_sortindex">sortindex</string>
    <string name="ok_ok">OK</string>
    <string name="artikel_autoadd">Soll dieser neue Artikel automatisch der Artikelliste hinzugefügt werden?</string>
        
</resources>