<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/back_zettel"
	    android:orientation="vertical" >
		<TextView
		    android:id="@+id/textCopyright"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dp"
		    android:layout_marginLeft="4dp"
		    android:text="(C) 2012 - Matthias Klingel"
		    android:textColor="#fbfa7b"
		    android:textSize="8sp"
		    android:textStyle="bold"
		    android:typeface="monospace" />
		    <LinearLayout
	        android:id="@+id/layoutListen"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="12dp"
	        android:orientation="vertical" >
	        
	        <ImageButton
	            android:id="@+id/imageListen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@android:color/transparent" 
	            android:src="@drawable/button_einkauf" />

	        <TextView
	            android:id="@+id/textListen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/listen"
	            android:textColor="#ffffff"
	            android:shadowColor="#000000"
	            android:shadowDx="2"
	            android:shadowDy="2"
	            android:shadowRadius="2"
	            android:textSize="16sp" />
	
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/layoutArtikel"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:orientation="vertical" >

	        <ImageButton
	            android:id="@+id/imageArtikel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@android:color/transparent" 
	            android:src="@drawable/button_artikel" />

	        <TextView
	            android:id="@+id/textArtikel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/artikel"
	            android:layout_gravity="center"
	            android:textColor="#ffffff"
	            android:shadowColor="#000000"
	            android:shadowDx="2"
	            android:shadowDy="2"
	            android:shadowRadius="2"
	            android:textSize="16sp" />
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/layoutShops"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:orientation="vertical" >
	
	        <ImageButton
	            android:id="@+id/imageShops"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@android:color/transparent" 
	            android:src="@drawable/button_shops" />
		
	        <TextView
	            android:id="@+id/textShops"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shops"
	            android:layout_gravity="center"
	            android:textColor="#ffffff"
	            android:shadowColor="#000000"
	            android:shadowDx="2"
	            android:shadowDy="2"
	            android:shadowRadius="2"
	            android:textSize="16sp" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/layoutExit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:orientation="vertical" >
	
	        <ImageButton
	            android:id="@+id/imageExit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@android:color/transparent" 
	            android:src="@drawable/button_exit" />
			
	        <TextView
	            android:id="@+id/textExit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/exit"
	            android:layout_gravity="center"
	            android:textColor="#ffffff"
	            android:shadowColor="#000000"
	            android:shadowDx="2"
	            android:shadowDy="2"
	            android:shadowRadius="2"
	            android:textSize="16sp" />
	
	    </LinearLayout>

	
	</LinearLayout>

</ScrollView>